--- a/Report.ipynb
+++ b/Report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eb642ef1",
+   "id": "bf99a8c8",
    "metadata": {},
    "source": [
     "# Data Selection\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "80c8a770",
+   "id": "20c75be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "50670858",
+   "id": "caa4a2ac",
    "metadata": {},
    "source": [
     "df\n"
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "722394ba",
+   "id": "a22f6cb6",
    "metadata": {},
    "outputs": [
     {
@@ -682,46 +682,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "e92f7a1a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2233 entries, 296 to 4029\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column                            Non-Null Count  Dtype         \n",
-      "---  ------                            --------------  -----         \n",
-      " 0   date                              2233 non-null   datetime64[ns]\n",
-      " 1   areaName                          2233 non-null   object        \n",
-      " 2   newCasesByPublishDate             2233 non-null   float64       \n",
-      " 3   cumCasesByPublishDate             7 non-null      float64       \n",
-      " 4   newDeaths28DaysByPublishDate      2233 non-null   float64       \n",
-      " 5   cumDeaths28DaysByPublishDate      2233 non-null   float64       \n",
-      " 6   cumDeaths28DaysByPublishDateRate  2233 non-null   float64       \n",
-      " 7   newDeaths28DaysByDeathDate        2225 non-null   float64       \n",
-      " 8   cumDeaths28DaysByDeathDate        2226 non-null   float64       \n",
-      " 9   cumDeaths28DaysByDeathDateRate    2226 non-null   float64       \n",
-      "dtypes: datetime64[ns](1), float64(8), object(1)\n",
-      "memory usage: 191.9+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Entries 2021 info\n",
-    "\n",
-    "dateFilter = df['date']>='2021-01-01'\n",
-    "cumData = df[dateFilter]\n",
-    "cumData.info()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "79283773",
+   "execution_count": 49,
+   "id": "0a3c8a02",
    "metadata": {},
    "outputs": [
     {
@@ -750,14 +712,14 @@
     "\n",
     "# df=df.drop(columns=['newDeaths28DaysByDeathDate','cumDeaths28DaysByDeathDate','cumDeaths28DaysByDeathDateRate'])\n",
     "dateFilter = df['date']>='2021-01-01'\n",
-    "cumData = df[dateFilter]\n",
-    "cumData.info()\n"
+    "data = df[dateFilter]\n",
+    "data.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "920562ae",
+   "execution_count": 50,
+   "id": "77925614",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +740,7 @@
        "        20571.0, 279.2]], dtype=object)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,19 +748,27 @@
    "source": [
     "# Creating NumPy Array as some libraries prefer it\n",
     "dateFilter = df['date']>='2021-01-01'\n",
-    "cumData = df[dateFilter]\n",
-    "cumData.values"
+    "data = df[dateFilter]\n",
+    "data.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8d05e84d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_excel(excel_writer='converted.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3c5644a",
+   "id": "1b88b3a9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.to_excel()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -874,7 +844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
