--- a/Report.ipynb
+++ b/Report.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf99a8c8",
+   "id": "1d75c481",
    "metadata": {},
    "source": [
     "# Data Selection\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "20c75be1",
+   "id": "c05985f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "caa4a2ac",
+   "id": "69a03c2c",
    "metadata": {},
    "source": [
     "df\n"
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a22f6cb6",
+   "id": "6e9831b2",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0a3c8a02",
+   "id": "a07f0ac2",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "77925614",
+   "id": "aa5af27c",
    "metadata": {},
    "outputs": [
     {
@@ -754,21 +754,297 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "8d05e84d",
+   "execution_count": 73,
+   "id": "b04320a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel(excel_writer='converted.xlsx', index=False)"
+    "dateFilter = df['date']>='2021-01-01'\n",
+    "data = df[dateFilter]\n",
+    "\n",
+    "data.to_excel(excel_writer='data.xlsx', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "db2b4c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting\n",
+    "\n",
+    "%matplotlib inline\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b88b3a9",
+   "id": "1bd635de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "finename = 'data.xlsx'\n",
+    "df = pd.read_excel(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "10a10e92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>areaName</th>\n",
+       "      <th>newCasesByPublishDate</th>\n",
+       "      <th>cumCasesByPublishDate</th>\n",
+       "      <th>newDeaths28DaysByPublishDate</th>\n",
+       "      <th>cumDeaths28DaysByPublishDate</th>\n",
+       "      <th>cumDeaths28DaysByPublishDateRate</th>\n",
+       "      <th>newDeaths28DaysByDeathDate</th>\n",
+       "      <th>cumDeaths28DaysByDeathDate</th>\n",
+       "      <th>cumDeaths28DaysByDeathDateRate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-11</td>\n",
+       "      <td>South West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-12</td>\n",
+       "      <td>South West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13</td>\n",
+       "      <td>South West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-14</td>\n",
+       "      <td>South West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-15</td>\n",
+       "      <td>South West</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4025</th>\n",
+       "      <td>2021-12-08</td>\n",
+       "      <td>North West</td>\n",
+       "      <td>4919.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>20520.0</td>\n",
+       "      <td>278.5</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>20558.0</td>\n",
+       "      <td>279.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4026</th>\n",
+       "      <td>2021-12-09</td>\n",
+       "      <td>North West</td>\n",
+       "      <td>4066.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>20533.0</td>\n",
+       "      <td>278.7</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>20565.0</td>\n",
+       "      <td>279.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4027</th>\n",
+       "      <td>2021-12-10</td>\n",
+       "      <td>North West</td>\n",
+       "      <td>4886.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>20550.0</td>\n",
+       "      <td>278.9</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>20569.0</td>\n",
+       "      <td>279.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4028</th>\n",
+       "      <td>2021-12-11</td>\n",
+       "      <td>North West</td>\n",
+       "      <td>6004.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>20569.0</td>\n",
+       "      <td>279.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20571.0</td>\n",
+       "      <td>279.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4029</th>\n",
+       "      <td>2021-12-12</td>\n",
+       "      <td>North West</td>\n",
+       "      <td>4428.0</td>\n",
+       "      <td>1360063.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20571.0</td>\n",
+       "      <td>279.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4030 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date    areaName  newCasesByPublishDate  cumCasesByPublishDate  \\\n",
+       "0    2020-03-11  South West                    NaN                    NaN   \n",
+       "1    2020-03-12  South West                    NaN                    NaN   \n",
+       "2    2020-03-13  South West                    NaN                    NaN   \n",
+       "3    2020-03-14  South West                    NaN                    NaN   \n",
+       "4    2020-03-15  South West                    NaN                    NaN   \n",
+       "...         ...         ...                    ...                    ...   \n",
+       "4025 2021-12-08  North West                 4919.0                    NaN   \n",
+       "4026 2021-12-09  North West                 4066.0                    NaN   \n",
+       "4027 2021-12-10  North West                 4886.0                    NaN   \n",
+       "4028 2021-12-11  North West                 6004.0                    NaN   \n",
+       "4029 2021-12-12  North West                 4428.0              1360063.0   \n",
+       "\n",
+       "      newDeaths28DaysByPublishDate  cumDeaths28DaysByPublishDate  \\\n",
+       "0                              NaN                           NaN   \n",
+       "1                              NaN                           NaN   \n",
+       "2                              NaN                           NaN   \n",
+       "3                              NaN                           NaN   \n",
+       "4                              NaN                           NaN   \n",
+       "...                            ...                           ...   \n",
+       "4025                          19.0                       20520.0   \n",
+       "4026                          13.0                       20533.0   \n",
+       "4027                          17.0                       20550.0   \n",
+       "4028                          19.0                       20569.0   \n",
+       "4029                           2.0                       20571.0   \n",
+       "\n",
+       "      cumDeaths28DaysByPublishDateRate  newDeaths28DaysByDeathDate  \\\n",
+       "0                                  NaN                         1.0   \n",
+       "1                                  NaN                         0.0   \n",
+       "2                                  NaN                         0.0   \n",
+       "3                                  NaN                         1.0   \n",
+       "4                                  NaN                         1.0   \n",
+       "...                                ...                         ...   \n",
+       "4025                             278.5                        13.0   \n",
+       "4026                             278.7                         7.0   \n",
+       "4027                             278.9                         4.0   \n",
+       "4028                             279.2                         2.0   \n",
+       "4029                             279.2                         NaN   \n",
+       "\n",
+       "      cumDeaths28DaysByDeathDate  cumDeaths28DaysByDeathDateRate  \n",
+       "0                            1.0                             NaN  \n",
+       "1                            1.0                             NaN  \n",
+       "2                            1.0                             NaN  \n",
+       "3                            2.0                             NaN  \n",
+       "4                            3.0                             0.1  \n",
+       "...                          ...                             ...  \n",
+       "4025                     20558.0                           279.0  \n",
+       "4026                     20565.0                           279.1  \n",
+       "4027                     20569.0                           279.2  \n",
+       "4028                     20571.0                           279.2  \n",
+       "4029                         NaN                             NaN  \n",
+       "\n",
+       "[4030 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df\n"
+   ]
   },
   {
    "cell_type": "markdown",
