--- a/DataReport.ipynb
+++ b/DataReport.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "id": "c05985f8",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "[4030 rows x 10 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "be723f91",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "4eddc80d",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "[4030 rows x 4 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "53003666",
    "metadata": {},
    "outputs": [
@@ -636,7 +636,7 @@
        "[4030 rows x 5 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "c6084d3b",
    "metadata": {
     "scrolled": true
@@ -666,7 +666,7 @@
        "Name: areaName, dtype: int64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "6e9831b2",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
        "Name: date, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,21 +701,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "4dbed4d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "East of England             651\n",
+       "East Midlands               650\n",
+       "North West                  645\n",
+       "London                      644\n",
+       "South West                  642\n",
+       "Yorkshire and The Humber    641\n",
+       "Name: areaName, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Removing South East data\n",
     "# filterSE = df['areaName']=='South East'\n",
     "# SE = df[filterSE]\n",
     "# SE\n",
-    "df = df[df.areaName != 'South East']"
+    "df = df[df.areaName != 'South East']\n",
+    "df['areaName'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "09dd77e8",
    "metadata": {},
    "outputs": [
@@ -818,7 +836,7 @@
        "3384                       12990.0                             235.1  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "id": "1e775796",
    "metadata": {
     "scrolled": true
@@ -884,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "8d8fead3",
    "metadata": {},
    "outputs": [
@@ -918,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "a07f0ac2",
    "metadata": {},
    "outputs": [
@@ -954,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "aa5af27c",
    "metadata": {},
    "outputs": [
@@ -976,7 +994,7 @@
        "        20571.0, 279.2]], dtype=object)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "id": "b04320a7",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1120,7 @@
        "300                              62.2  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "id": "75c51c26",
    "metadata": {},
    "outputs": [],
@@ -1171,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 16,
    "id": "db2b4c9b",
    "metadata": {},
    "outputs": [
@@ -1364,7 +1382,7 @@
        "[2076 rows x 7 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "10a10e92",
    "metadata": {},
    "outputs": [
@@ -1499,18 +1517,18 @@
        "4                              62.2  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "id": "fb3d1568",
    "metadata": {},
    "outputs": [
@@ -1541,17 +1559,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 19,
    "id": "4678e61f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f90b0891b50>"
+       "<matplotlib.legend.Legend at 0x7ff55b1c0e50>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1631,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "02900478",
    "metadata": {},
    "outputs": [
@@ -1702,17 +1720,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "id": "6ced0f84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f90513b4640>"
+       "<matplotlib.legend.Legend at 0x7ff5280ac1f0>"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1792,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "id": "5b307094",
    "metadata": {},
    "outputs": [
@@ -1863,17 +1881,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "id": "855ae81f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9070104a00>"
+       "<matplotlib.legend.Legend at 0x7ff54827d190>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1953,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "id": "0582c7c9",
    "metadata": {},
    "outputs": [
@@ -2034,7 +2052,7 @@
        "1729 2021-12-12  Yorkshire and The Humber               954088.0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "id": "7d59e5b0",
    "metadata": {},
    "outputs": [
@@ -2080,14 +2098,12 @@
     "plt.xlabel('Cases')\n",
     "plt.title('Cumulative Cases By Region')\n",
     "plt.grid(axis='y')\n",
-    "plt.show()\n",
-    "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "id": "e75c3a87",
    "metadata": {},
    "outputs": [
@@ -2168,7 +2184,7 @@
        "1729 2021-12-12  Yorkshire and The Humber                         12990"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2183,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 27,
    "id": "66b0b2e1",
    "metadata": {},
    "outputs": [
@@ -2214,13 +2230,12 @@
     "plt.xlabel('Deaths')\n",
     "plt.title('Cumulative Deaths By Region')\n",
     "plt.grid(axis='y')\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 28,
    "id": "fa3f78fb",
    "metadata": {},
    "outputs": [
@@ -2256,7 +2271,7 @@
     "\n",
     "plt.xlabel('Usage')\n",
     "plt.title('Cumulative Deaths vs Cases By Region')\n",
-    "plt.grid(axis='x')\n"
+    "plt.grid(axis='x')"
    ]
   },
   {
@@ -2316,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
