--- a/DataReport.ipynb
+++ b/DataReport.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "c05985f8",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "[4030 rows x 10 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "be723f91",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "8aaf5531",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "4eddc80d",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "[4030 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "53003666",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "[4030 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "c6084d3b",
    "metadata": {
     "scrolled": true
@@ -719,7 +719,7 @@
        "Name: areaName, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "6e9831b2",
    "metadata": {},
    "outputs": [
@@ -764,7 +764,7 @@
        "Name: date, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "4dbed4d4",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
        "Name: areaName, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "75c51c26",
    "metadata": {},
    "outputs": [],
@@ -1242,34 +1242,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19caf69f",
-   "metadata": {},
-   "source": [
-    "# Data Exploration\n",
-    "\n",
-    "- Utilise suitable data mining tools \n",
-    "- and analysis techniques to find \n",
-    "  - significant patterns and trends \n",
-    "  - SPSS, Excel, Tableau, WEKA, Python libraries, etc \n",
-    "- Explain the patterns you have observed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00606cfc",
+   "id": "ac4b00ac",
    "metadata": {},
    "source": [
     "# Data Modelling and Visualisation\n",
     "\n",
-    "- Use appropriate tools to perform some visualisation on the chosen dataset. \n",
-    "- The choice is yours, based on your future intention of work \n",
-    "- And also the familiarity of the tool. \n",
-    "- Your report should document and justify the techniques you have used to \n",
-    "  - Mine and analyse the data \n",
-    "  - And the patterns or trends that were discovered. \n",
-    "- Finally, construct a model that can make some predictions or forecast trends.\n",
+    "Use appropriate tools to perform some visualisation on the chosen dataset. The choice is yours, based on your future intention of work and also the familiarity of the tool. Your report should document and justify the techniques you have used to mine and analyse the data and the patterns or trends that were discovered. Finally, construct a model that can make some predictions or forecast trends.\n",
     "\n",
-    "## Cross industry standard process for data minig (CRIPS-DM)\n",
+    "## Cross industry standard process for data mining (CRIPS-DM)\n",
+    "\n",
+    "\n",
     "\n",
     "- Business Understanding\n",
     "- Data Understanding\n",
@@ -1279,6 +1261,15 @@
     "        - Date - Ordinal\n",
     "        - Catagorical - Area\n",
     "- Data Preperation\n",
+    "    - Choosing 2021\n",
+    "    - Fixing Mismatched cumVals\n",
+    "    - Solving Nan Values\n",
+    "    - Removing unncecesary col\n",
+    "    - Convert catagorical data into nums\n",
+    "    - Split Data\n",
+    "        - Train - to train data - builds the model\n",
+    "        - Test - to test data - meassures success\n",
+    "        \n",
     "- Modeling\n",
     "- Evaluation\n",
     "- Deployment"
@@ -1286,223 +1277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "db2b4c9b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>areaName</th>\n",
-       "      <th>newCasesByPublishDate</th>\n",
-       "      <th>cumCasesByPublishDate</th>\n",
-       "      <th>newDeaths28DaysByPublishDate</th>\n",
-       "      <th>cumDeaths28DaysByPublishDate</th>\n",
-       "      <th>cumDeaths28DaysByPublishDateRate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-01-01</td>\n",
-       "      <td>South West</td>\n",
-       "      <td>2104</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30</td>\n",
-       "      <td>3422</td>\n",
-       "      <td>60.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-01-02</td>\n",
-       "      <td>South West</td>\n",
-       "      <td>3093</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13</td>\n",
-       "      <td>3435</td>\n",
-       "      <td>60.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-01-03</td>\n",
-       "      <td>South West</td>\n",
-       "      <td>2337</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21</td>\n",
-       "      <td>3456</td>\n",
-       "      <td>61.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-01-04</td>\n",
-       "      <td>South West</td>\n",
-       "      <td>3316</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>3475</td>\n",
-       "      <td>61.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-01-05</td>\n",
-       "      <td>South West</td>\n",
-       "      <td>2972</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46</td>\n",
-       "      <td>3521</td>\n",
-       "      <td>62.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2071</th>\n",
-       "      <td>2021-12-08</td>\n",
-       "      <td>North West</td>\n",
-       "      <td>4919</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>20520</td>\n",
-       "      <td>278.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2072</th>\n",
-       "      <td>2021-12-09</td>\n",
-       "      <td>North West</td>\n",
-       "      <td>4066</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13</td>\n",
-       "      <td>20533</td>\n",
-       "      <td>278.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2073</th>\n",
-       "      <td>2021-12-10</td>\n",
-       "      <td>North West</td>\n",
-       "      <td>4886</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17</td>\n",
-       "      <td>20550</td>\n",
-       "      <td>278.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2074</th>\n",
-       "      <td>2021-12-11</td>\n",
-       "      <td>North West</td>\n",
-       "      <td>6004</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>20569</td>\n",
-       "      <td>279.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2075</th>\n",
-       "      <td>2021-12-12</td>\n",
-       "      <td>North West</td>\n",
-       "      <td>4428</td>\n",
-       "      <td>1360063.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20571</td>\n",
-       "      <td>279.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2076 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           date    areaName  newCasesByPublishDate  cumCasesByPublishDate  \\\n",
-       "0    2021-01-01  South West                   2104                    NaN   \n",
-       "1    2021-01-02  South West                   3093                    NaN   \n",
-       "2    2021-01-03  South West                   2337                    NaN   \n",
-       "3    2021-01-04  South West                   3316                    NaN   \n",
-       "4    2021-01-05  South West                   2972                    NaN   \n",
-       "...         ...         ...                    ...                    ...   \n",
-       "2071 2021-12-08  North West                   4919                    NaN   \n",
-       "2072 2021-12-09  North West                   4066                    NaN   \n",
-       "2073 2021-12-10  North West                   4886                    NaN   \n",
-       "2074 2021-12-11  North West                   6004                    NaN   \n",
-       "2075 2021-12-12  North West                   4428              1360063.0   \n",
-       "\n",
-       "      newDeaths28DaysByPublishDate  cumDeaths28DaysByPublishDate  \\\n",
-       "0                               30                          3422   \n",
-       "1                               13                          3435   \n",
-       "2                               21                          3456   \n",
-       "3                               19                          3475   \n",
-       "4                               46                          3521   \n",
-       "...                            ...                           ...   \n",
-       "2071                            19                         20520   \n",
-       "2072                            13                         20533   \n",
-       "2073                            17                         20550   \n",
-       "2074                            19                         20569   \n",
-       "2075                             2                         20571   \n",
-       "\n",
-       "      cumDeaths28DaysByPublishDateRate  \n",
-       "0                                 60.5  \n",
-       "1                                 60.7  \n",
-       "2                                 61.1  \n",
-       "3                                 61.4  \n",
-       "4                                 62.2  \n",
-       "...                                ...  \n",
-       "2071                             278.5  \n",
-       "2072                             278.7  \n",
-       "2073                             278.9  \n",
-       "2074                             279.2  \n",
-       "2075                             279.2  \n",
-       "\n",
-       "[2076 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Plotting\n",
-    "%matplotlib inline\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "finename2021 = 'data.xlsx'\n",
-    "df = pd.read_excel(finename2021)\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "10a10e92",
    "metadata": {},
    "outputs": [
     {
@@ -1613,12 +1389,23 @@
        "4                              62.2  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Plotting\n",
+    "%matplotlib inline\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "finename2021 = 'data.xlsx'\n",
+    "df = pd.read_excel(finename2021)\n",
+    "\n",
     "df.head()"
    ]
   },
