--- a/DataReport.ipynb
+++ b/DataReport.ipynb
@@ -1251,24 +1251,29 @@
     "\n",
     "## Cross industry standard process for data mining (CRIPS-DM)\n",
     "\n",
+    "In my project sofar I have decided to use a CRIPS-DM approach to analyse and mine my data:\n",
     "\n",
-    "\n",
-    "- Business Understanding\n",
+    "- It started with having a understanding of my project requirements\n",
+    "  - Finding and importing a medical dataset\n",
+    "  - To demonstrate data analytics \n",
+    "  - And data visualisation \n",
+    "  - That could be used in the healthcare sector\n",
     "- Data Understanding\n",
-    "    - Numerical\n",
-    "        - Ratio - Numbers\n",
-    "    - Nominal\n",
-    "        - Date - Ordinal\n",
-    "        - Catagorical - Area\n",
-    "- Data Preperation\n",
-    "    - Choosing 2021\n",
-    "    - Fixing Mismatched cumVals\n",
-    "    - Solving Nan Values\n",
-    "    - Removing unncecesary col\n",
-    "    - Convert catagorical data into nums\n",
-    "    - Split Data\n",
-    "        - Train - to train data - builds the model\n",
-    "        - Test - to test data - meassures success\n",
+    "  - The next important part is grasping and understanding my data\n",
+    "  - Which was needed to do the analysis above\n",
+    "  - My data consisted of mostly numerical data\n",
+    "    - With the dates being in datetime format\n",
+    "    - and all case and death data being floats\n",
+    "  - And some Nominal/Categorical data\n",
+    "    - AreaName specifically defines the areas in which cases and deaths are recorded\n",
+    "- Data Preparation\n",
+    "  - Above my data has been mostly prepared based on set requirements\n",
+    "  - I have prepared and chosen to produce data for 2021\n",
+    "  - Solving null Values appropriately\n",
+    "  - Removing unnecessary col\n",
+    "  - All with the intention of splitting my data into\n",
+    "      - Training data builds the model\n",
+    "      - Testing data to measures success\n",
     "        \n",
     "- Modeling\n",
     "- Evaluation\n",
