--- a/DataReport.ipynb
+++ b/DataReport.ipynb
@@ -1280,12 +1280,13 @@
     "  - Creating and critiquing my work accordingly\n",
     "\n",
     "## Plotting and visualizing\n",
-    "\n"
+    "\n",
+    "To start off plotting I am importing and viewing the information and head of the data as it is a good practice to do so"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "db2b4c9b",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1398,7 @@
        "4                              62.2  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "fb3d1568",
    "metadata": {},
    "outputs": [
@@ -1449,18 +1450,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a7f42fa",
+   "metadata": {},
+   "source": [
+    "With the data imported successfully, I can now make Line plots with the data as a whole. Staring by creating filters for the different areas found in the UK and then followed by separating the region data into their corresponding X and Y values. The first set of plots will be represented through taking new cases and plotting it based on the dates they have been recorded."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "4678e61f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc272442a00>"
+       "<matplotlib.legend.Legend at 0x7f99e3a432b0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1538,8 +1547,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ff1c26d",
+   "metadata": {},
+   "source": [
+    "The above plot shows all of the regions on a singular graph, showing relatively equal growth all around the UK no matter the season, with the exception of London. This might be due to London being a travel hotspot as Heathrow is located there, possibly resulting in a higher rate of spreading the virus as people return from their journeys from various nations. Moreover while cases do seem to have decreased since the start of the year you can slowly see an increase around the 6th month all over the UK, which most likely corresponds to the the UK lockdown restrictions lifting on the 19th of July, as stated in by the the uk government and documented on the BBC (2021). Another worthwhile thing to note is that cases, as stated by the latest data have started to rise again, possibly indicating a yearly trend and being something that could be evaluated during prediction states.\n",
+    "\n",
+    "I then proceeded to plot the regions separately on various subplots to have a better view on how each individual region is affected by the virus."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "02900478",
    "metadata": {},
    "outputs": [
@@ -1606,18 +1625,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a1bff45f",
+   "metadata": {},
+   "source": [
+    "From the data in the subplots we can clearly see that cases went through a significant drop during the summer months but slowly picked up to about the same rate they were at the start if the year if not higher. With some areas experiencing sudden growth in recent days possibly due to the new omnicron variant. As it is highly infectious, according to the CDC (2021), it would seem natural for it to start spiking in London as it is a travel hub like previously discussed.\n",
+    "\n",
+    "As cases are only one aspect of the virus, I thought it would be worthwhile treating the deaths in the same way, plotting them as above and noting trends and patterns accordingly. This would provide a better understanding of the severity of the virus itself."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "6ced0f84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc2a168d040>"
+       "<matplotlib.legend.Legend at 0x7f99e3f54d30>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1694,8 +1723,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adf47527",
+   "metadata": {},
+   "source": [
+    "When looking at the deaths plotted above, it is clear to see that they have significantly dropped as of recent days, with some manageable fluctuation seen as of recent. This is interesting to note as cases have risen to the state they were at the beginning of the year, only a fraction of patients are suffer fatalities comparatively. This is most likely due to the rollout of vaccines and their accessibility in recent times, as it wouldn't necessarily stop the spread but lessen the effects of the virus on your body, according to the NHS (2021)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "5b307094",
    "metadata": {},
    "outputs": [
@@ -1759,6 +1796,16 @@
     "axs[1,2].grid(axis='x')\n",
     "\n",
     "fig.set_size_inches(20, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17bc8a98",
+   "metadata": {},
+   "source": [
+    "When viewing the data in subplots its quite clear that the recent deaths have at least halved in recent times, showing effectiveness in stopping the variant of the times severity. Leading to an indication of success of the vaccinee rollout and its effectiveness when protecting afflicted patients against the virus\n",
+    "\n",
+    "To further explore this I wanted to plot the rate at which people are dying for the year and seeing what assumptions can be made there"
    ]
   },
   {
@@ -1849,6 +1896,12 @@
     "plt.grid(axis='x')\n",
     "plt.legend(loc=(1.02,0))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1527552f",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2496,6 +2549,18 @@
     "\n",
     "- Critically evaluate your results \n",
     "- and compare your findings to other similar studies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b634a256",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "BBC: https://www.bbc.co.uk/news/uk-57809691\n",
+    "CDC: https://www.cdc.gov/coronavirus/2019-ncov/variants/omicron-variant.html\n",
+    "NHS: https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/coronavirus-vaccine/"
    ]
   }
  ],
