--- a/DataReport.ipynb
+++ b/DataReport.ipynb
@@ -2581,11 +2581,11 @@
    "source": [
     "# Evaluation\n",
     "\n",
-    "- Critically evaluate your results \n",
-    "- and compare your findings to other similar studies.\n",
+    "My results show both an increase in daily cases and a decrease of deaths overall within the UK, the former of which seems to be accurate when compared to data gathered from OurWorldInData as of 03/01/22. This is due to the newest omnicron variant running rampant int the UK at this moment and being highly infectious even with most citizens being vaccinated. \n",
     "\n",
+    "However, my linear regression model for deaths does not seem accurate due to the data being recorded 28 days prior to the date, indicating a steady decrease. However, when compared to the predictive models of HealthData we can see that there is predicted to be an increase in cases throughout the month. I would not say that my model was unsuccessful though, as the new variant was spontaneous and acted as an outlier event.\n",
     "\n",
-    "\n"
+    "As such I would say that my analysis was relatively successful in what i could find and surmise from the given dataset, with the largest take away being that Covid-19 is quite unpredictable in nature as most any virus. While vaccines might prove effective, unless everyone in a community comes together to take it the virus can mutate and produce unforeseen consequences."
    ]
   },
   {
@@ -2598,7 +2598,9 @@
     "BBC: https://www.bbc.co.uk/news/uk-57809691\n",
     "CDC: https://www.cdc.gov/coronavirus/2019-ncov/variants/omicron-variant.html\n",
     "NHS: https://www.nhs.uk/conditions/coronavirus-covid-19/coronavirus-vaccination/coronavirus-vaccine/\n",
-    "ONS: https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationprojections/compendium/subnationalpopulationprojectionssupplementaryanalysis/2014basedprojections/howthepopulationofenglandisprojectedtoage"
+    "ONS: https://www.ons.gov.uk/peoplepopulationandcommunity/populationandmigration/populationprojections/compendium/subnationalpopulationprojectionssupplementaryanalysis/2014basedprojections/howthepopulationofenglandisprojectedtoage\n",
+    "https://ourworldindata.org/coronavirus-data\n",
+    "https://covid19.healthdata.org/global?view=daily-deaths&tab=trend"
    ]
   }
  ],
